--- a/UI/ColorVision.UI.Desktop/Plugins/PluginManagerWindow.xaml
+++ b/UI/ColorVision.UI.Desktop/Plugins/PluginManagerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ColorVision.UI.Plugins.PluginManagerWindow"
+﻿<Window x:Class="ColorVision.UI.Desktop.Plugins.PluginManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="410"/>
+            <ColumnDefinition Width="430"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid>
@@ -127,9 +127,6 @@
                                 <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
                                     <StackPanel Orientation="Horizontal">
                                         <ui:ToggleSwitch  IsChecked="{Binding PluginInfo.Enabled}"  Margin="0,0,10,0" />
-                                        <Border Background="#FFA726" CornerRadius="10" Width="20" Height="20" Margin="0,0,5,0" ToolTip="有可用更新" Visibility="{Binding HasUpdate, Converter={StaticResource bool2VisibilityConverter}}">
-                                            <TextBlock Text="⬆" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12"/>
-                                        </Border>
                                         <Image Source="{Binding Icon}" Width="20" Margin="0,0,10,0"/>
                                         <TextBlock  Text="{Binding Name,Mode=OneWay}"/>
                                     </StackPanel>
@@ -137,12 +134,16 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="加载">
+                        <GridViewColumn Header="加载" Width="190">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
                                     <StackPanel Orientation="Horizontal">
+                  
                                         <TextBlock Width="50" Text="{Binding AssemblyVersion}" Margin="0,0,5,0"/>
                                         <TextBlock  Width="50"  Text="{Binding LastVersion}"  Margin="0,0,5,0"/>
+                                        <Border Background="#FFA726" CornerRadius="10" Width="20" Height="20" Margin="0,0,5,0" ToolTip="有可用更新" Visibility="{Binding HasUpdate, Converter={StaticResource bool2VisibilityConverter}}">
+                                            <TextBlock Text="⬆" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12"/>
+                                        </Border>
                                         <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}" Visibility="{Binding HasUpdate,Converter={StaticResource bool2VisibilityConverter}}" />
                                     </StackPanel>
                                 </DataTemplate>
