--- a/UI/ColorVision.UI.Desktop/Wizards/WizardWindow.xaml
+++ b/UI/ColorVision.UI.Desktop/Wizards/WizardWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ColorVision.Wizards.WizardWindow"
+﻿<Window x:Class="ColorVision.UI.Desktop.Wizards.WizardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Wizards"
+        xmlns:local="clr-namespace:ColorVision.UI.Desktop.Wizards"
         xmlns:ui ="clr-namespace:ColorVision.UI;assembly=ColorVision.Common"
-        xmlns:properties ="clr-namespace:ColorVision.Properties"
+        xmlns:properties ="clr-namespace:ColorVision.UI.Desktop.Properties"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:WizardWindowConfig}"
         Title="{x:Static properties:Resources.SetupWizard}"  Height="550" Width="800" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
@@ -45,8 +45,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="StepIndicator" Grid.Row="0" Text="{x:Static properties:Resources.Step11}" HorizontalAlignment="Center" FontSize="14" Margin="0,0,0,5"/>
-            <ProgressBar x:Name="WizardProgress" Grid.Row="1" Height="5" Minimum="0" Maximum="100" Value="0"/>
+            <ProgressBar x:Name="WizardProgress" Grid.Row="1" Minimum="0" Maximum="100" Value="0"/>
         </Grid>
         
         <Grid Grid.Row="1" Visibility="{Binding IsList,Converter={StaticResource bool2VisibilityConverter}}">
