--- a/Engine/ColorVision.Engine/Services/PhyCameras/Licenses/LicenseManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/Licenses/LicenseManagerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.Services.PhyCameras.LicenseManagerWindow"
+﻿<Window x:Class="ColorVision.Engine.Services.PhyCameras.Licenses.LicenseManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine.Services.PhyCameras"
+        xmlns:local="clr-namespace:ColorVision.Engine.Services.PhyCameras.Licenses"
         xmlns:dao="clr-namespace:ColorVision.Engine.Services.PhyCameras.Dao"
         mc:Ignorable="d"
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
