--- a/Engine/ColorVision.Engine/Batch/IVL/ILvPlotWindow.xaml
+++ b/Engine/ColorVision.Engine/Batch/IVL/ILvPlotWindow.xaml
@@ -8,13 +8,13 @@
         mc:Ignorable="d"
         Title="IVL Curve Plot" Height="800" Width="1000">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Right" Width="250" Margin="8">
+        <StackPanel DockPanel.Dock="Right" Width="260" Margin="8">
             <TextBlock Text="Display Mode" FontSize="14" FontWeight="Bold" Margin="0,0,0,8"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,8">
                 <RadioButton x:Name="RbILv" Content="I-Lv" IsChecked="True" Margin="0,0,16,0" Checked="DisplayMode_Changed" GroupName="DisplayMode"/>
                 <RadioButton x:Name="RbVLv" Content="V-Lv" Margin="0,0,16,0" Checked="DisplayMode_Changed" GroupName="DisplayMode"/>
                 <RadioButton x:Name="RbIV" Content="I-V" Margin="0,0,16,0" Checked="DisplayMode_Changed" GroupName="DisplayMode"/>
-                <RadioButton x:Name="RbPLv" Content="P-Lv" Checked="DisplayMode_Changed" GroupName="DisplayMode"/>
+                <RadioButton x:Name="RbPLv" Content="Power-Lv" Checked="DisplayMode_Changed" GroupName="DisplayMode"/>
             </StackPanel>
             
             <Separator Margin="0,8,0,12"/>
