--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
@@ -50,7 +50,7 @@
             <StackPanel Margin="5">
                 <TextBlock x:Name="TextBlockUnknow" Text="{x:Static properties:Resources.UnknownStatus}"  HorizontalAlignment="Center"/>
                 <Button x:Name="ButtonUnauthorized" Margin="0,0,0,3" Content="{x:Static properties:Resources.UnauthorizedOrLicenseExpired}" Command="{Binding EditCommand}"/>
-                <TextBlock x:Name="TextBlockOffLine" Text="OffLine"  HorizontalAlignment="Center"/>
+                <TextBlock x:Name="TextBlockOffLine" Text="{x:Static properties:Resources.offline}"  HorizontalAlignment="Center"/>
                 <DockPanel x:Name="StackPanelContent" Margin="0,0,0,3" >
                     <CheckBox IsChecked="{Binding Config.IsNet}" VerticalAlignment="Center" Content="{x:Static properties:Resources.Network}" DockPanel.Dock="Right" IsEnabled="False"/>
                     <Button x:Name="ButtonSourceMeter1" Margin="10,0" DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}"  Click="ButtonSourceMeter1_Click"/>
@@ -58,11 +58,17 @@
                 </DockPanel>
                 <StackPanel  x:Name="StackPanelOpen" >
 
-                    <StackPanel Orientation="Horizontal" Margin="0,0,0,3" >
-                        <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding Config.IsSourceV}"  Margin="0,0,5,0"  />
-                        <RadioButton Content="{x:Static properties:Resources.I}" IsChecked="{Binding Config.IsSourceV,Converter={StaticResource inverseBooleanConverter}}" Margin="0,0,5,0"/>
+                    <DockPanel Margin="0,0,0,3" >
+
+                        <TextBlock Text="Channel" VerticalAlignment="Center" Margin="0,0,5,0"/>
                         <ComboBox Name="CbChannel" Style="{StaticResource ComboBox.Small}"  SelectedValue="{Binding Config.Channel}"   Width="50" />
-                    </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding Config.IsSourceV}"  Margin="0,0,5,0"  />
+                            <RadioButton Content="{x:Static properties:Resources.I}" IsChecked="{Binding Config.IsSourceV,Converter={StaticResource inverseBooleanConverter}}" Margin="0,0,5,0"/>
+                        </StackPanel>
+        
+
+                    </DockPanel>
 
                     <StackPanel Margin="0,0,0,3">
 
@@ -86,11 +92,11 @@
                         </UniformGrid>
                         <UniformGrid Columns="2"  Margin="0,0,0,3">
                             <DockPanel  Margin="0,0,5,0" >
-                                <TextBlock  Text="{x:Static properties:Resources.V}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
+                                <TextBlock  Text="当前电压(V)" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
                                 <TextBox x:Name="TextSourceMeterV" Text="{Binding Config.V, StringFormat={}{0:F4}}" BorderThickness="0,0,0,1" IsEnabled="False" />
                             </DockPanel>
                             <DockPanel Margin="0,0,5,0" >
-                                <TextBlock  Text="{x:Static properties:Resources.I}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
+                                <TextBlock  Text="当前电流(mA)" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
                                 <TextBox x:Name="TextSourceMeterI" Text="{Binding Config.I, StringFormat={}{0:F4}}" BorderThickness="0,0,0,1" IsEnabled="False" />
                             </DockPanel>
                         </UniformGrid>
